--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,7 +189,7 @@ p {
   font-size: 36px;
 }
 
-.footer {
+.footer-wrapper {
   padding: 30px;
   clear: both;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -197,6 +197,6 @@ p {
   text-align: center;
 }
 
-.footer h2 {
+.footer-wrapper h2 {
   font-size: 20px;
 }
