--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,13 +51,17 @@ p {
   font-size: 16px;
 }
 
-.hero {
+/* .hero {
   height: 400px;
   width: 100%;
   margin-bottom: 25px;
   background-image: url("../images/digital-marketing-meeting.jpg");
   background-size: cover;
   background-position: center;
+} */
+
+.hero {
+  width: 10%;
 }
 
 .float-left {
