--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,16 +16,16 @@ body {
   color: #ffffff;
 }
 
-.header h1 {
+.navbar h1 {
   display: inline-block;
   font-size: 48px;
 }
 
-.header h1 .seo {
+.navbar h1 .seo {
   color: #d9dcd6;
 }
 
-.header div {
+.navbar div {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
@@ -33,7 +33,7 @@ body {
   font-size: 20px;
 }
 
-.header div ul {
+.navbar div ul {
   list-style-type: none;
 }
 
@@ -91,49 +91,17 @@ p {
   background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-subsection {
   margin-bottom: 32px;
   color: #ffffff;
 }
 
-.benefit-brand {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-cost {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-subsection h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
-.benefit-brand h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-cost h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-lead img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.benefit-brand img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.benefit-cost img {
+.benefit-subsection img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
@@ -199,8 +167,4 @@ p {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   text-align: center;
-}
-
-.footer-wrapper h2 {
-  font-size: 20px;
 }
