--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,18 +26,12 @@ body {
   color: #d9dcd6;
 }
 
-.navbar div {
+.navbar .navlinks {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
   font-size: 20px;
-}
-
-.navbar div ul {
   list-style-type: none;
-}
-
-.header div ul li {
   display: inline-block;
   margin-left: 25px;
 }
