--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,12 +23,11 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
 }
-.navbar div ul {
-  list-style-type: none;
-}
-.navbar div ul li {
+
+.navbar div ul > li {
   display: inline-block;
   margin-left: 25px;
+  list-style-type: none;
 }
 
 .navbar h1 {
