--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* font-family set in universal selector */
 * {
   box-sizing: border-box;
   padding: 0;
@@ -9,6 +10,8 @@
 body {
   background-color: #d9dcd6;
 }
+
+/* Navbar styling */
 
 .navbar {
   padding: 20px;
@@ -39,6 +42,7 @@ body {
   color: #d9dcd6;
 }
 
+/* A & P tag styling */
 a {
   color: #ffffff;
   text-decoration: none;
@@ -47,6 +51,8 @@ a {
 p {
   font-size: 16px;
 }
+
+/* Main Section Styling - class commonality added to alleviate duplication */
 
 .hero {
   width: 100%;
@@ -71,6 +77,7 @@ p {
   background-color: #2589bd;
 }
 
+/* class commonality to alleviate need to duplicate CSS blocks */
 .benefit-subsection {
   margin-bottom: 32px;
   color: #ffffff;
@@ -87,6 +94,7 @@ p {
   max-width: 150px;
 }
 
+/* class commonality to alleviate need to duplicate CSS blocks */
 .content-box {
   margin-bottom: 20px;
   padding: 50px;
@@ -114,6 +122,7 @@ p {
   font-size: 36px;
 }
 
+/* Footer styling */
 .footer-wrapper {
   padding: 30px;
   clear: both;
