--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
   color: #ffffff;
 }
 
-.navbar div {
+.navbar nav {
   padding-top: 15xpx;
   margin-right: 20px;
   float: right;
@@ -27,7 +27,7 @@ body {
   font-size: 20px;
 }
 
-.navbar div ul > li {
+.navbar nav ul > li {
   display: inline-block;
   margin-left: 25px;
   list-style-type: none;
@@ -129,4 +129,9 @@ p {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   text-align: center;
+}
+
+/* Test Media Query */
+
+@media screen and (max-width) {
 }
